--- a/css/styles.css
+++ b/css/styles.css
@@ -515,17 +515,23 @@ li.address-list-item.first> a {
 
 .projects-list-item{
     width: 370px;
-
-    left: 1015px;
-    top: 262px;
     margin-bottom: 30px;
     box-sizing: border-box;
     border: 1px solid rgb(238,238,238);
     cursor: pointer;
 }
-.projects-list-item:focus,
-.projects-list-item:hover {
-    border: 1px solid white;
+.projects-list-link {
+    text-decoration: none;
+    width: 370px;
+    display: block;
+}
+.projects-list-link:focus,
+.projects-list-link:hover {
+    box-shadow: 2px 4px 4px rgba(0,0,0,0.15);
+}
+
+.projects-list-img {
+    width: 370px;
 }
 
 .projects-title{
@@ -559,12 +565,10 @@ li.address-list-item.first> a {
     border: 1px solid #AFB1B8;
     border-radius: 3px;
 }
-.clients-list a:hover {
+.clients-list a:hover,
+.clients-list a:focus {
     border: 1px solid #2196F3;
     color: #2196F3;
-}
-.clients-list a:focus {
-    color:#2196F3;
 }
 .clients-list a svg {
     width: 100px;
@@ -572,7 +576,8 @@ li.address-list-item.first> a {
     margin-top: 20px;
     fill: #AFB1B8;
 }
-.clients-list a:hover svg{
+.clients-list a:hover svg,
+.clients-list a:focus svg{
     fill: #2196F3;
 }
 /* =========== END CLIENTS ============== */
